--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion "28.0.1"
     defaultConfig {
-        applicationId "com.gabilheri.moviestmdb"
+        applicationId "com.plex.tv"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
@@ -115,4 +115,11 @@ dependencies {
     implementation('com.mikepenz:aboutlibraries:5.5.9@aar') {
         transitive = true
     }
+
+
+    //==============================
+    //implementation 'com.google.dagger:dagger-android:2.11'
+    //implementation 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+   // annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    //annotationProcessor 'com.google.dagger:dagger-compiler:2.11'*
 }
